--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.PizzaApp"
         tools:targetApi="31">
         <activity
-            android:name=".HomeScreenActivity"
+            android:name=".HomeScreen.HomeScreenActivity"
             android:exported="false" />
         <activity
             android:name=".SignUpScreen.SignUpScreenActivity"
