--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.PizzaApp"
         tools:targetApi="31">
         <activity
+            android:name=".ProductsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RestaurantsActivity"
+            android:exported="false" />
+        <activity
             android:name=".HomeScreen.HomeScreenActivity"
             android:exported="false" />
         <activity
